Instances/Securitygroups.tf
#Create SG for bastion instance, only allowinig TCP/22
resource "aws_security_group" "bastion-sg" {

  name        = "bastion-sg"
  description = "Allow TCP/22"
  vpc_id      = aws_vpc.docker.id
  ingress {
    description = "Allow 22 from our public IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.external_ip]
  }

  ingress {
    description = "Allow port 80"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
